First exercise tasca especialització 1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-
+    <header class="max-width-1200">
+        <div class="header-first">
+            <div class="logo">
+                .logo
+            </div>
+            <nav class="nav">
+                .nav
+            </nav>
+            <div class="social">
+                .social
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
