Exercise 1 desktop complete

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
         </div>
 
     </section>
+
+    <footer class="max-width-1200">
+        <span class="pie">
+            .pie
+        </span>
+    </footer>
 </body>
 
 </html>
